force-app/main/default/objects/OA_Communication_Preference_Token__c/OA_Communication_Preference_Token__c.object-meta.xml
<CustomObject>
    <description>Token metadata for secure communication preference links. Raw token values are never stored.</description>
    <label>OA Communication Preference Token</label>
    <nameField>
        <displayFormat>CPT-{000000}</displayFormat>
        <label>Communication Preference Token Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OA Communication Preference Tokens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>