force-app/main/default/objects/OA_Communication_Preference_Token__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>Intended token action.</description>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Campaign Unsubscribe</fullName>
                <default>true</default>
                <label>Campaign Unsubscribe</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>