force-app/main/default/objects/OA_Communication_Preference_Token__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campaign associated with this token.</description>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Communication Preference Tokens</relationshipLabel>
    <relationshipName>OA_Comm_Preference_Tokens</relationshipName>
    <type>Lookup</type>
</CustomField>