force-app/main/default/objects/OA_Communication_Preference_Token__c/fields/Created_At__c.field-meta.xml
<CustomField>
    <fullName>Created_At__c</fullName>
    <description>Date and time when the raw token was generated.</description>
    <label>Created At</label>
    <type>DateTime</type>
</CustomField>