force-app/main/default/objects/OA_Communication_Preference_Token__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email address snapshot associated with this token.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>