force-app/main/default/objects/OA_Communication_Preference_Token__c/fields/Expires_At__c.field-meta.xml
<CustomField>
    <fullName>Expires_At__c</fullName>
    <description>Date and time after which the token should be rejected.</description>
    <label>Expires At</label>
    <type>DateTime</type>
</CustomField>