force-app/main/default/objects/OA_Communication_Preference_Token__c/fields/Last_Audit__c.field-meta.xml
<CustomField>
    <fullName>Last_Audit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Most recent audit event created from this token.</description>
    <label>Last Audit</label>
    <referenceTo>OA_Communication_Preference_Audit__c</referenceTo>
    <relationshipLabel>Tokens Last Referencing Audit</relationshipLabel>
    <relationshipName>Tokens_Last_Audit</relationshipName>
    <type>Lookup</type>
</CustomField>