force-app/main/default/objects/OA_Communication_Preference_Token__c/fields/Last_Used_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Used_At__c</fullName>
    <description>Date and time when this token was most recently used.</description>
    <label>Last Used At</label>
    <type>DateTime</type>
</CustomField>