force-app/main/default/objects/OA_Communication_Preference_Token__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lead associated with this token. Phase 1 is Lead-only.</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Communication Preference Tokens</relationshipLabel>
    <relationshipName>OA_Comm_Preference_Tokens</relationshipName>
    <type>Lookup</type>
</CustomField>