force-app/main/default/objects/OA_Communication_Preference_Token__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Token lifecycle status.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Active</fullName><default>true</default><label>Active</label></value>
            <value><fullName>Used</fullName><default>false</default><label>Used</label></value>
            <value><fullName>Expired</fullName><default>false</default><label>Expired</label></value>
            <value><fullName>Revoked</fullName><default>false</default><label>Revoked</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>