force-app/main/default/objects/OA_Communication_Preference_Token__c/fields/Token_Hash__c.field-meta.xml
<CustomField>
    <fullName>Token_Hash__c</fullName>
    <description>SHA-256 hash of the raw token. The raw token is never stored.</description>
    <externalId>true</externalId>
    <label>Token Hash</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>