force-app/main/default/objects/OA_Communication_Preference_Token__c/fields/Use_Count__c.field-meta.xml
<CustomField>
    <fullName>Use_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of times this token has been submitted.</description>
    <label>Use Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>